# api/swagger.yaml
@@ -7,12 +7,12 @@ info:
   title: "Eco Vibes API"
   contact:
     name: "Bianco_Consonni"
-    url: "http://localhost:5000/pages/contact.html"
+    url: "https://hypproject1920.herokuapp.com/pages/contact.html"
     email: "bianco_consonni@ecovibes.com"
   license:
     name: "Eco Vibes License"
     url: "http://license.foo.com"
-host: hypproject1920.herokuapp.com
+host: hypproject1920.herokuapp.com/
 basePath: /api
 tags:
 - name: "person"
@@ -239,6 +239,28 @@ paths:
         404:
           description: "Service not found"
       x-swagger-router-controller: "Service"
+  /service/{id}/photo:
+    get:
+      tags:
+      - "service"
+      description: "Get all the photo about a specific service"
+      operationId: "serviceIdPhotoGET"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "The ID of the service"
+        required: true
+        type: "integer"
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/ServicePhoto"
+        404:
+          description: "No photo found"
+      x-swagger-router-controller: "Service"    
   /service/{id}/event:
     get:
       tags:
@@ -337,6 +359,28 @@ paths:
         404:
           description: "Project not found"
       x-swagger-router-controller: "Project"
+  /project/{id}/photo:
+    get:
+      tags:
+      - "project"
+      description: "Get all the photo about a specific project"
+      operationId: "projectIdPhotoGET"
+      parameters:
+      - name: "id"
+        in: "path"
+        description: "The ID of the project"
+        required: true
+        type: "integer"
+      responses:
+        200:
+          description: "Success"
+          schema:
+            type: "array"
+            items:
+              $ref: "#/definitions/ProjectPhoto"
+        404:
+          description: "No photo found"
+      x-swagger-router-controller: "Project"     
   /project/{id}/service:
     get:
       tags:
@@ -443,7 +487,7 @@ definitions:
         email: "mario.rossi@ecovibes.com"
       starting_date: "2020-04-01T00:00:00.000Z"
       ending_date: "2020-07-01T00:00:00.000Z"
-      image: "ttps://ecocontrol.ch/wp-content/uploads/2017/10/3.1-Castensagow.jpg"
+      image: "https://ecocontrol.ch/wp-content/uploads/2017/10/3.1-Castensagow.jpg"
   Project:
     properties:
       id:
@@ -472,3 +516,35 @@ definitions:
       description: "Recupero e valorizzazione agricola e forestale, nonché didattico – ricreativa della piana di Castensago"
       starting_date: "2020-04-01T00:00:00.000Z"
       ending_date: "2020-07-08T00:00:00.000Z"
+  ServicePhoto:
+    properties:
+      id:
+        type: integer
+        example: 4
+      service:
+        type: integer
+        example: 4  
+      url:
+        type: string
+        example: https://ecocontrol.ch/wp-content/uploads/2017/10/3.1-Castensagow.jpg
+    description: Model containing service photo info
+    example:
+      id: 4
+      service: 5
+      url: https://ecocontrol.ch/wp-content/uploads/2017/10/3.1-Castensagow.jpg
+  ProjectPhoto:
+    properties:
+      id:
+        type: integer
+        example: 4
+      project:
+        type: integer
+        example: 4  
+      url:
+        type: string
+        example: https://ecocontrol.ch/wp-content/uploads/2017/10/3.1-Castensagow.jpg
+    description: Model containing service photo info
+    example:
+      id: 4
+      project: 5
+      url: https://ecocontrol.ch/wp-content/uploads/2017/10/3.1-Castensagow.jpg        
