# controllers/Project.js
@@ -24,6 +24,17 @@ module.exports.projectIdGET = function projectIdGET (req, res, next) {
     });
 };
 
+module.exports.projectIdPhotoGET = function serviceIdEventGET (req, res, next) {
+  var id = req.swagger.params['id'].value;
+  Project.projectIdPhotoGET(id)
+    .then(function (response) {
+      utils.writeJson(res, response);
+    })
+    .catch(function (response) {
+      utils.writeJson(res, response);
+    });
+};
+
 module.exports.projectIdServiceGET = function projectIdServiceGET (req, res, next) {
   var id = req.swagger.params['id'].value;
   Project.projectIdServiceGET(id)
